examples/bad/hold_break_after_move.mko
// Must fail: `break` after move — every exit path moved `s`.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    while true {
        consume(s)
        break
    }
    print(s)
}
